--- a/vehicles-api/src/main/resources/application.properties
+++ b/vehicles-api/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 pricing.endpoint=http://localhost:8762
 maps.endpoint=http://localhost:9191
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetchRegistry=true
